# medusa-api-quality-gate

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: e2e.yml  integration.yml  k6.yml  pages.yml  quality-gate.yml
apps/medusa/: .dockerignore  .env.template  Dockerfile  medusa-config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh
apps/medusa/src/scripts/: seed.ts
apps/storefront/: .env.template  .eslintrc.js  Dockerfile  next.config.js  package.json  start.sh  tailwind.config.js
apps/storefront/src/: middleware.ts
apps/storefront/src/app/: layout.tsx
apps/storefront/src/i18n/: get-messages.ts  provider.tsx  request.ts  types.ts
apps/storefront/src/i18n/messages/: en-US.json  ru-RU.json
apps/storefront/src/lib/: constants.tsx
apps/storefront/src/lib/data/: markets.ts  regions.ts
apps/storefront/src/lib/hooks/: use-market.ts
apps/storefront/src/lib/util/: money.ts
apps/storefront/src/types/: next-intl.d.ts
docs/: TEST_PLAN.md  localization.md  manual-checks.md  runtime.md
docs/adr/: 0001-live-runtime-over-mocks.md  0002-test-pyramid-and-skip-vs-fail.md  0003-two-stacks-pytest-and-playwright.md
e2e/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
e2e/src/: fixtures.ts  market.ts
e2e/src/pages/: base.page.ts  cart.page.ts  home.page.ts  product.page.ts  store.page.ts
e2e/tests/: a11y.spec.ts  cart.spec.ts  localization.spec.ts  smoke.spec.ts
k6/: README.md  load.js  smoke.js
quality-gate/: README.md  pyproject.toml
quality-gate/src/quality_gate/: __init__.py  bootstrap.py  config.py  doctor.py  errors.py  test_data.py  timing.py
quality-gate/src/quality_gate/clients/: __init__.py  admin.py  auth.py  base.py  cart.py  categories.py  customers.py  health.py  products.py  regions.py  shipping.py
quality-gate/src/quality_gate/db/: __init__.py  postgres.py  reconciler.py
quality-gate/src/quality_gate/models/: __init__.py  admin.py  auth.py  cart.py  categories.py  common.py  contract.py  customers.py  errors.py  health.py  products.py  regions.py
quality-gate/tests/: conftest.py
quality-gate/tests/admin/: test_admin_api.py  test_admin_authorization.py  test_admin_client.py
quality-gate/tests/cart/: test_cart_aggregation_property.py  test_cart_client_preflight_property.py  test_cart_creation.py  test_cart_line_items.py  test_cart_shipping_markets.py  test_cart_totals.py  test_cart_totals_unit.py  test_shipping_invalid_method_property.py
quality-gate/tests/contract/: test_currency_code_property.py  test_products_contract.py  test_regions_contract.py  test_required_fields_property.py  test_round_trip_property.py  test_round_trip_unit.py  test_sla_helper_unit.py
quality-gate/tests/db/: test_cart_db_reconciliation.py  test_reconciler_unit.py  test_seed_state.py
quality-gate/tests/localization/: test_store_localization.py
quality-gate/tests/negative/: test_error_contract.py  test_store_negative_input.py
quality-gate/tests/smoke/: test_bootstrap.py  test_customer_credentials_factory.py  test_customer_credentials_factory_property.py  test_customer_registration_contract.py  test_doctor.py  test_health.py  test_http_client.py  test_response_time.py  test_settings.py  test_settings_property.py  test_store_api.py
quality-gate/tests/store/: test_products_client.py  test_products_pagination.py
scripts/: sync-publishable-key.sh
(+75 files in other folders)
