[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-gate"
version = "0.1.0"
description = "Pytest-based API quality gate for the local Medusa ecommerce runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "requests>=2.32,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-html>=4.2,<5.0",
  "allure-pytest>=2.13,<3.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
markers = [
  "smoke: быстрые smoke checks против живого runtime",
  "contract: контрактная валидация API-ответов",
  "localization: проверки локализации и x-medusa-locale",
  "db: state verification через PostgreSQL",
  "bootstrap: проверки локального Python bootstrap и окружения",
]

[tool.setuptools.packages.find]
where = ["src"]
