[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-gate"
version = "0.1.0"
description = "Pytest-based API quality gate for the local Medusa ecommerce runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "requests>=2.32,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<10.0",
  "pytest-html>=4.2,<5.0",
  "allure-pytest>=2.13,<3.0",
  "hypothesis>=6,<7",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "types-requests>=2.32,<3.0",
  "mutmut>=2.4,<3.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=quality_gate --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
markers = [
  "smoke: быстрые smoke checks против живого runtime",
  "contract: контрактная валидация API-ответов",
  "localization: проверки локализации и x-medusa-locale",
  "db: state verification через PostgreSQL",
  "bootstrap: проверки локального Python bootstrap и окружения",
  "cart: проверки cart и checkout flows (создание корзины, line items, shipping)",
  "admin: проверки Admin API (аутентификация и авторизация)",
  "negative: негативные сценарии ввода и контракты ошибок (4xx/доступ)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  # This repo is intentionally bilingual (Russian docstrings/comments); the
  # Cyrillic/Latin look-alike rules only produce false positives here.
  "RUF001",
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and longer, descriptive names.
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["quality_gate"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
